# LockNote

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.cmd  build.rs  test.cmd
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: build.cmd  sign-metadata.json  sign.cmd  test.cmd
src/: CloseConfirmDialog.cs  CreatePasswordDialog.cs  Crypto.cs  EditorForm.cs  GoToLineDialog.cs  LineNumberTextBox.cs  NoteTab.cs  Program.cs  RenameTabDialog.cs  SearchBar.cs  Settings.cs  SettingsDialog.cs  Storage.cs  TabBar.cs  TabStore.cs  Theme.cs  UnlockDialog.cs  Updater.cs  integration_tests.rs  main.rs  updater.rs
src/crypto/: mod.rs
src/settings/: mod.rs
src/storage/: mod.rs
src/theme/: mod.rs
src/ui/: editor.rs  mod.rs  search_bar.rs
src/ui/dialogs/: about.rs  close_confirm.rs  create_password.rs  find_replace.rs  goto_line.rs  mod.rs  preferences_dialog.rs  security_dialog.rs  settings_dialog.rs  unlock.rs
tests/: CryptoTests.cs  SettingsTests.cs  StorageTests.cs  TabStoreTests.cs  TestFramework.cs  TestMain.cs
